# HiSH-test-faultinject

./: .gitattributes  .gitignore  LICENSE  README.md  README_EN.md  build-profile.template.json5  oh-package-lock.json5  oh-package.json5
.hvigor_backup/: backup_info.txt
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/guide/: 01_Linux_Shell.md  02_APK.md  03_OpenRC.md  04_Emulator.md  05_Rootfs.md  06_Shared_Folder.md  07_C_Cpp.md  08_Docker.md  Z1_Jit.md
entry/: .gitignore  build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  fault_double_free.cpp  fault_double_free.h  fault_heap_overflow.cpp  fault_heap_overflow.h  fault_injection.cpp  fault_injection.h  fault_mismatch.cpp  fault_mismatch.h  fault_stack.cpp  fault_stack.h  fault_uaf.cpp  fault_uaf.h  napi_init.cpp  normal_operations.cpp  normal_operations.h  video_player.cpp  video_player.h
entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
entry/src/main/ets/components/: BackButton.ets  EditEmulatorContent.ets  EmulatorItem.ets  EmulatorListGrid.ets  EmulatorManagementContent.ets  ImageManagementContent.ets  OpenSourceContent.ets  PortMappingEdit.ets  QemuMonitor.ets  ReactiveGrid.ets  RepeatGrid.ets  RootfsManagementContent.ets  SettingsBase.ets  SettingsContent.ets  SharedFolderContent.ets  SimpleWebView.ets  UserGuide.ets  VmStatusBar.ets  WebTerminal.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/lib/: QemuAgent.ets  QemuAgentManager.ets  backgroundRunningManager.ets  copyFile.ets  copyToClipboard.ets  deepEquals.ets  deleteDirectoryRecursive.ets  readQcow2VirtualSize.ets  startVm.ets  stringToArrayBuffer.ets  systemProfile.ets  validateFolderName.ets
entry/src/main/ets/model/: Emulator.ets  appOption.ets
entry/src/main/ets/pages/: EditEmulator.ets  EmulatorManagementPage.ets  GuideWebPage.ets  Index.ets  RootfsManagement.ets  SettingsPage.ets  SharedFolderPage.ets  UserGuidePage.ets  VideoPlayerPage.ets  VncPage.ets
entry/src/main/ets/utils/: ImageTasks.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/rawfile/guide/: 01_Linux_Shell.html  02_APK.html  03_OpenRC.html  04_Emulator.html  05_Rootfs.html  06_Shared_Folder.html  07_C_Cpp.html  08_Docker.html  Z1_Jit.html
entry/src/main/resources/rawfile/guide/css/: dark.css
entry/src/main/resources/rawfile/novnc/: package.json
entry/src/main/resources/rawfile/pages/: license.html
entry/src/main/resources/rawfile/term/: README.md  term.css  term.html  term.js  xterm-addon-fit.js  xterm-addon-webgl.js
entry/src/main/resources/rawfile/video/: test.avi
entry/src/main/resources/rawfile/vm/keymaps/: en-us
entry/src/main/resources/zh_CN/element/: string.json
entry/src/mock/: Libentry.mock.ets  mock-config.json5
hvigor/: hvigor-config.json5
scripts/: build_and_backup.ps1  crash_loop_test.ps1  crash_loop_test.py
